work on lazily-loaded string bundles - don't load a bundle until the first string is requested - reduces startup time! only in effect if STRRES_ASYNC environment variable is set bug 76944 sr=erik, r=valeski